[tool.poetry]
name = "furtherland"
version = "0.1.0"
description = "A Light-weight, pluggable Blog Platform"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
classifiers=[
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/futursolo/furtherland"
packages = [
    { include = "furtherland" },
]

[tool.poetry.dependencies]
python = "^3.8"

# Utils
python-dotenv = ">=0.14.0,<1"
cryptography = ">=3.1,<4"
magicdict = "<2,>=1.0.6"
typing-extensions = ">=3.7.4.3"

# Web
hiyori = "<1,>=0.1.3"
sketchbook = ">=0.2.1,<1"
magichttp = ">=1.1.1,<2"
destination = ">=1.2.1,<2"
hakoniwa = { git = "https://github.com/futursolo/hakoniwa.git" }

# Database
aiomysql = ">=0.0.20,<0.1"
tortoise-orm = { extras = ["aiomysql"], version = "^0.17.0" }
tartiflette = "^1.3.3"
pydantic = "^1.8.2"
scramp = "^1.4.0"

[tool.poetry.dev-dependencies]
# Sort imports
isort = "^5.8.0"
flake8-isort = "^4.0.0"

# Auto formatting
black = "^20.8b1"
flake8-black = "^0.2.1"

# Typing
mypy = "^0.812"

# Linters
flake8 = "^3.9.0"

# Enforce docstring for public classes and functions
#flake8-docstrings = "^1.6.0"

# Enforce snake_case
pep8-naming = "^0.11.1"

# Version check
flake8-2020 = "^1.6.0"

# Detect potentially buggy functions
flake8-bugbear = "^21.3.2"

# No builtin names
flake8-builtins = "^1.5.3"

# No old style formatting
flake8-pep3101 = "^1.3.0"

# More readable names
flake8-variables-names = "^0.0.4"

# Simplify Logic
flake8-simplify = "^0.14.0"

# Dynamic Versioning
poetry-dynamic-versioning = "^0.13.0"

# Testing
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
vcs = "git"
style = "pep440"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning<1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
